--- a/README.html
+++ b/README.html
@@ -9,9 +9,9 @@
     body {
       margin: 0;
       padding: 0;
-      background: #E6C3FF; /* Soft Lavender */
+      background: #E6C3FF;
       color: #fff;
-      font-family: 'Arial', sans-serif; /* Changed font to Arial */
+      font-family: 'Arial', sans-serif; 
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -28,9 +28,9 @@
       opacity: 0;
       animation: fadeIn 3s ease-in-out forwards 1s;
       display: none;
-      color: #060505; /* Light Pink Text for better contrast */
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Soft shadow for readability */
-      font-family: 'Verdana', sans-serif; /* Smoother font */
+      color: #060505;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+      font-family: 'Verdana', sans-serif; 
     }
 
     @keyframes fadeIn {
